# brain

./: .pre-commit-config.yaml  README.md  neuron.py  pyproject.toml
src/brain/: neuron.py
tests/: test_neuron.py
