[tool.poetry]
name = "brain"
version = "0.1.0"
description = ""
authors = ["William D'Onofrio"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[tool.poetry.scripts]
brain = "brain.neuron:main"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
