[tool.poetry]
name = "brain"
version = "0.1.0"
description = ""
authors = ["William D'Onofrio"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^3.3.3"
black = "^24.3.0"
pyproject-flake8 = "^6.0.0.post1"

[tool.poetry.scripts]
brain = "brain.neuron:main"

[tool.flake8]
max-line-length = 1000

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
